[package]
name = "eqsolver"
version = "0.2.0"
edition = "2021"
description = "A library that solves equations using numerical methods"
repository = "https://github.com/AzeezDa/eqsolver"
license = "MIT"
readme = "README.md"
keywords = ["equation", "solver", "mathematics", "ode", "optimization"]
categories = ["science", "mathematics", "algorithms"]

[badges]
maintenance = { status = "passively-maintained" }

[lib]
name = "eqsolver"
path = "src/lib.rs"

[dependencies]
nalgebra = "0.33.0"
num-traits = "0.2.19"
rand = { version = "0.8.5", optional = true }
rand_distr = { version = "0.4.3", optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[features]
default = ["global_optimisers"]
global_optimisers = ["dep:rand", "dep:rand_distr"]

[[bench]]
name = "eqsolver_benchmark"
harness = false
path = "benchmarks/lib.rs"
