[package]
name = "eqsolver"
version = "0.4.0"
edition = "2021"
description = "A library that solves equations using numerical methods"
repository = "https://github.com/AzeezDa/eqsolver"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["equation", "solver", "mathematics", "optimization", "integration"]
categories = ["science", "mathematics", "algorithms"]

[badges]
maintenance = { status = "passively-maintained" }

[lib]
name = "eqsolver"
path = "src/lib.rs"

[dependencies]
nalgebra = "0.35.0"
num-traits = "0.2.19"
rand = "0.10.1"
rand_distr = "0.6.0"
thiserror = "2.0.18"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
rand_chacha = "0.10.0"

[[bench]]
name = "eqsolver_benchmark"
harness = false
path = "benchmarks/lib.rs"
